My there and there